--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    background-image: url('https://kartinkin.net/uploads/posts/2021-07/1626845406_10-kartinkin-com-p-bolshoi-serii-fon-krasivo-10.jpg');
+    background-size: 1920px 1080px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-weight: 700;
+    font-size: 25px;
+
+}
+ul>li {
+    list-style-type: none;
 }
