--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
 body {
-    background-image: url('https://kartinkin.net/uploads/posts/2021-07/1626845406_10-kartinkin-com-p-bolshoi-serii-fon-krasivo-10.jpg');
-    background-size: 1920px 1080px;
-
-    font-weight: 700;
-    font-size: 25px;
-
-}
-ul>li {
-    list-style-type: none;
+ margin: 0;
 }
