--- a/src/app/AppWithRedux.module.css
+++ b/src/app/AppWithRedux.module.css
@@ -2,10 +2,12 @@
     width: 100%;
     background-image: url("https://images.wallpaperscraft.ru/image/single/sneg_belyy_fon_poverhnost_79574_1920x1080.jpg");
     background-position: center;
+    height: 100vh;
 
 }
 .bodyDark {
     background-image: url("https://img3.goodfon.ru/original/1920x1080/1/bc/chernyy-fon-carapiny-abstrakciya.jpg") ;
     background-position: center;
     color: antiquewhite;
+    height: 100%;
 }
